syntax = "proto3";
package client;

message DeviceLoginRequest {
	uint64 rid = 1;			//流水号
	string token = 11;		//im系统的token
    string appId = 12;      //分配个应用的id
   	string deviceId = 13;   //设备的id
   	string platform = 14;	//
}

//messageType = 14
message DeviceLoginResponse {
	uint64 rid = 1;		//流水号
	string code = 2;	//回应的响应码
	string desc = 3;	//回应码的描述
}





